# Usecase3-cust-exp-management-v1

./: .env.example  .gitignore  DESIGN.md  README.md  Segment Routing (SR-MPLS & SRv6) Architecture and Traffic Steering in Cisco Environments.docx  Segment Routing PCE in Cisco Crosswork Network Controller 7.1.docx  WORKFLOW.md  callrecording_vs_code_gap.md  from_ppt_reference.md  howthisusecasewillwork.md  recording.md  tomorrow_tasks.md  what_human_developer_needstodo.md
agent_template/: Dockerfile  README.md  __init__.py  config.yaml  config_loader.py  main.py  pyproject.toml  workflow.py
agent_template/api/: __init__.py  server.py
agent_template/chains/: __init__.py  llm_factory.py  prompts.py
agent_template/nodes/: __init__.py  base_nodes.py  checklist_nodes.py
agent_template/schemas/: __init__.py  models.py  state.py  tasks.py
agent_template/tests/: __init__.py  test_workflow.py
agent_template/tools/: __init__.py  io_agent_client.py
agent_template/tools/a2a_client/: __init__.py  client.py
agent_template/tools/mcp_client/: __init__.py  client.py
agents/: __init__.py
agents/audit/: Dockerfile  __init__.py  (+3 more)
api_specs/: cat_fp_deployment.json  cat_inventory_rpc_7_1_0.json  cisco_cs_srte_config.json  cisco_l2vpn_route_policy.json  cisco_l3vpn_route_policy.json  cisco_sr_te_cfp_7_1_0.json  coe_csm_config.yaml  coe_npm_metrics.json  coe_optimization_engine.yaml  coe_performance_metrics.json  coe_rsvp_te_lsp_details.json  coe_rsvp_te_tunnel_ops.yaml  coe_sr_policy_details.json  coe_sr_policy_ops.yaml  coe_topology_l3_l2.json  ietf_l2vpn_config.json  ietf_l2vpn_oper_data.json  ietf_l3vpn_config.json  ietf_l3vpn_oper_data.json  ietf_network_slice.json  ietf_te_7_1_0.json  nso_connector.json  sh_assurance_graph.json  sh_historical_data.json  sh_probe_manager.json
(+188 files in other folders)
